# oom

./: CMakeLists.txt  README  pch.txt
al/: CMakeLists.txt
awl/: CMakeLists.txt  posedit.h  poslabel.h  sigedit.h
dependencies/lilvbundle/: CMakeLists.txt
oom/: AbstractMidiEditor.h  CMakeLists.txt  FadeCurve.h  NameValidator.h  TrackManager.cpp  TrackManager.h  app.cpp  audiotrack.cpp  cobject.h  conf.h  cserver.h  cthread.h  globals.cpp  main.cpp  midiport.h  miditransform.cpp  miditransform.h  osc.cpp  plugin.cpp  plugin.h  plugin_lv2.cpp  plugin_vst.cpp  route.cpp  shortcuts.cpp  stringparam.cpp  synth.cpp  track.cpp  transport.cpp  transport.h  transpose.cpp  transpose.h  value.h
oom/Composer/: CMakeLists.txt  CanvasNavigator.cpp  CanvasNavigator.h  Composer.cpp  ComposerCanvas.cpp
oom/cliplist/: CMakeLists.txt  cliplist.h
oom/ctrl/: CMakeLists.txt  ResizeHandle.h  ctrlcanvas.cpp  ctrledit.cpp
oom/driver/: CMakeLists.txt
oom/instruments/: CMakeLists.txt  editinstrument.cpp  editinstrument.h  importinstruments.cpp  midictrledit.cpp  midictrledit.h  minstrument.cpp
oom/liste/: CMakeLists.txt  editevent.cpp  editevent.h
oom/marker/: CMakeLists.txt  markerview.cpp
oom/master/: CMakeLists.txt
oom/midiedit/: CMakeLists.txt  EventCanvas.cpp  Performer.cpp  Performer.h  PerformerCanvas.cpp
oom/mixer/: AudioMixer.cpp  AudioMixer.h  CMakeLists.txt  astrip.h
oom/mplugins/: CMakeLists.txt  midifilterimpl.h  midiitransform.cpp  midiitransform.h  mitplugin.cpp  mittranspose.cpp  mittranspose.h  mrconfig.cpp  mrconfig.h  rhythm.cpp  rhythm.h
oom/network/: CMakeLists.txt  lsclient.cpp  lsclient.h  samplertest.h
oom/traverso_shared/: OOMCommand.cpp
oom/widgets/: AutomationMenu.cpp  AutomationMenu.h  CMakeLists.txt  CreateTrackDialog.h  DoubleSlider.cpp  DoubleSlider.h  StretchDialog.h  TempoHeader.cpp  TimeHeader.cpp  TrackEffects.cpp  TrackEffects.h  TrackInstrumentMenu.cpp  TrackInstrumentMenu.h  apconfig.h  ccdelegate.h  ccedit.h  comboQuant.h  commentdock.h  (+71 more)
oostudio/: CMakeLists.txt  OOClient.h  OODownload.h  OOProcess.h  OOStudio.cpp  main.cpp
patchcanvas/: CMakeLists.txt  canvasbezierline.cpp  canvasbezierlinemov.cpp  canvasbox.cpp  canvasline.cpp  canvaslinemov.cpp  canvasport.cpp  canvastestapp.h  patchcanvas.cpp  patchscene.h
(+20 files in other folders)
